# flow-pipe-rpc-demo

./: .gitmodules  CMakeLists.txt  README.md  docker-compose.yml
flow-pipe/: CMakeLists.txt  Dockerfile
flow-pipe/config/: pipeline.yaml  rpc-pipeline.yaml
flow-pipe/flows/: rpc-pipeline.yaml
flow-pipe/src/: main.cpp  otel.cpp  otel.h
flow-pipe/src/stages/transform_stage/: CMakeLists.txt  register.cpp  transform_stage.cpp  transform_stage.h  transform_stage_config.h
flow-pipe/stages/nats_jetstream_sink/: CMakeLists.txt  nats_jetstream_sink.cc
flow-pipe/stages/nats_jetstream_source/: CMakeLists.txt  nats_jetstream_source.cc
flow-pipe/stages/nats_reply_sink/: CMakeLists.txt  nats_reply_sink.cc  nats_reply_sink.proto
flow-pipe/stages/nats_request_source/: CMakeLists.txt  nats_request_source.cc  nats_request_source.proto
flow-pipe/stages/rpc_transform/: CMakeLists.txt  rpc_transform.cc  rpc_transform.proto
flow-pipe/stages/transform_stage/: CMakeLists.txt  transform_stage_config.h
grpc/: Dockerfile
grpc-client/: CMakeLists.txt  Dockerfile
grpc-client/src/: main.cpp  otel.cpp  otel.h
grpc-gateway/: CMakeLists.txt  Dockerfile
grpc-gateway/src/: main.cpp  otel.cpp  otel.h
grpc/client/: CMakeLists.txt
grpc/client/src/: main.cpp
grpc/common/: otel.cpp  otel.h
grpc/gateway/: CMakeLists.txt
grpc/gateway/src/: main.cpp
js-init/: Dockerfile  init.sh
otel-collector/: config.yaml
proto/: service.proto
tests/: e2e.sh
